# jcargo

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md
.github/workflows/: release.yml
src/: backend.rs  dependencies.rs  dependency.rs  download.rs  io.rs  javac_parser.rs  main.rs  manifest.rs  mavenpom.rs  module.rs  tasks.rs
src/dependencies/: dependency_graph.rs  maven.rs  maven_metadata.rs  mavenpom.rs  mod.rs  pomcache.rs  xml_utils.rs
src/module/: manifest.rs  mod.rs
srcjava/: Main.java
srcjava/bruh/: Bruh.java
testproject/: .gitignore  jcargo.exp.toml  jcargo.toml
testproject/src/: OtherMain.java
testproject/src/anotherone/: Lib.java
testproject/src/bruh/: Bruh.java
testprojectkt/: jcargo.toml
testprojectkt/src/: Lib.java  User.java  main.kt
