[package]
name = "jcargo"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3"
quick-xml = { version = "0.22", features = ["serialize"] }
regex = "1"
reqwest = { version = "0.11", features = ["stream"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
structopt = { version = "0.3", features = ["color"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
walkdir = "2"
