[package]
name = "jcargo"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]
authors = ["Guillaume Anthouard <25181283+Gui-Yom@users.noreply.github.com>"]
rust-version = "1.56"
description = "Trying to remake Rust's excellent build tool for the JVM ecosystem."
repository = "https://github.com/Gui-Yom/jcargo/"
homepage = "https://github.com/Gui-Yom/jcargo/"
license = "MIT OR Apache-2.0"
keywords = ["build", "java", "kotlin", "jvm"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 4
lto = "thin"

[dependencies]
anyhow = "1"
async-recursion = "0.3"
quick-xml = { version = "0.22", features = ["serialize"] }
regex = "1"
reqwest = { version = "0.11", features = ["stream"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
structopt = { version = "0.3", features = ["color"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
url = "2"
walkdir = "2"
